--- a/source.html
+++ b/source.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <base data-ice="baseUrl">
-  <title data-ice="title">Home | GSF JavaScript Client SDK</title>
+  <base data-ice="baseUrl" href>
+  <title data-ice="title">Source | GSF JavaScript Client SDK</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/prettify-tomorrow.css">
   <script src="script/prettify/prettify.js"></script>
@@ -59,19 +59,87 @@
 </div>
 </nav>
 
-<div class="content" data-ice="content"><div data-ice="index" class="github-markdown"><p></p><h1 class="gsf-title">
-GSF JavaScript Client SDK
-</h1>
+<div class="content" data-ice="content"><h1>Source <img data-ice="coverageBadge" src="./badge.svg"><span data-ice="totalCoverageCount" class="total-coverage-count">34/46</span></h1>
 
-<p></p>
-<p>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</p>
-<h3 id="-a-href----manual-migration-guide-v4-html--&#xBB;-migration-guide--v3-to-v4--a-"><a href="./manual/migration-guide-v4.html">&#xBB; Migration Guide: v3 to v4</a></h3><p><em>Update to v3 of the SDK.</em></p>
-<h3 id="-a-href----manual-migration-guide-v3-html--&#xBB;-migration-guide--v2-to-v3--a-"><a href="./manual/migration-guide-v3.html">&#xBB; Migration Guide: v2 to v3</a></h3><p><em>Update to v3 of the SDK.</em></p>
-<h3 id="-a-href----manual-installation-html--&#xBB;-installation-guide--a-"><a href="./manual/installation.html">&#xBB; Installation Guide</a></h3><p><em>Install the SDK.</em></p>
-<h3 id="-a-href----manual-getting-started-html--&#xBB;-getting-started--a-"><a href="./manual/getting-started.html">&#xBB; Getting Started</a></h3><p><em>Get started using the SDK.</em></p>
-<h3 id="-a-href----manual-examples-html--&#xBB;-examples--a-"><a href="./manual/examples.html">&#xBB; Examples</a></h3><p><em>Learn more using code examples.</em></p>
-<h3 id="-a-href----identifiers-html--&#xBB;-api-reference--a-"><a href="./identifiers.html">&#xBB; API Reference</a></h3><p><em>Read the full developer documentation.</em></p>
-</div>
+<table class="files-summary" data-ice="files" data-use-coverage="true">
+  <thead>
+    <tr>
+      <td>File</td>
+      <td>Identifier</td>
+      <td class="coverage">Document</td>
+      <td style="display: none;">Size</td>
+      <td style="display: none;">Lines</td>
+      <td style="display: none;">Updated</td>
+    </tr>
+  </thead>
+  <tbody>
+    
+  <tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/Client.js.html#errorLines=11,112">src/Client.js</a></span></td>
+      <td data-ice="identifier" class="identifiers"><span><a href="class/src/Client.js~Client.html">Client</a></span></td>
+      <td class="coverage"><span data-ice="coverage">87 %</span><span data-ice="coverageCount" class="coverage-count">14/16</span></td>
+      <td style="display: none;" data-ice="size">11313 byte</td>
+      <td style="display: none;" data-ice="lines">319</td>
+      <td style="display: none;" data-ice="updated">2020-09-03 19:28:06 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/GSF.js.html">src/GSF.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">-</span></td>
+      <td style="display: none;" data-ice="size">417 byte</td>
+      <td style="display: none;" data-ice="lines">15</td>
+      <td style="display: none;" data-ice="updated">2020-05-03 15:01:53 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/Job.js.html#errorLines=41,44,51,58,9">src/Job.js</a></span></td>
+      <td data-ice="identifier" class="identifiers"><span><a href="class/src/Job.js~Job.html">Job</a></span></td>
+      <td class="coverage"><span data-ice="coverage">54 %</span><span data-ice="coverageCount" class="coverage-count">6/11</span></td>
+      <td style="display: none;" data-ice="size">7855 byte</td>
+      <td style="display: none;" data-ice="lines">216</td>
+      <td style="display: none;" data-ice="updated">2020-09-03 19:28:06 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/Service.js.html#errorLines=26,8">src/Service.js</a></span></td>
+      <td data-ice="identifier" class="identifiers"><span><a href="class/src/Service.js~Service.html">Service</a></span></td>
+      <td class="coverage"><span data-ice="coverage">77 %</span><span data-ice="coverageCount" class="coverage-count">7/9</span></td>
+      <td style="display: none;" data-ice="size">3573 byte</td>
+      <td style="display: none;" data-ice="lines">118</td>
+      <td style="display: none;" data-ice="updated">2020-05-05 14:38:03 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/Task.js.html#errorLines=32,8">src/Task.js</a></span></td>
+      <td data-ice="identifier" class="identifiers"><span><a href="class/src/Task.js~Task.html">Task</a></span></td>
+      <td class="coverage"><span data-ice="coverage">77 %</span><span data-ice="coverageCount" class="coverage-count">7/9</span></td>
+      <td style="display: none;" data-ice="size">7540 byte</td>
+      <td style="display: none;" data-ice="lines">195</td>
+      <td style="display: none;" data-ice="updated">2020-09-03 19:28:06 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/utils/EVENTS.js.html">src/utils/EVENTS.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">-</span></td>
+      <td style="display: none;" data-ice="size">187 byte</td>
+      <td style="display: none;" data-ice="lines">8</td>
+      <td style="display: none;" data-ice="updated">2020-05-03 15:01:53 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/utils/GSF_API.js.html">src/utils/GSF_API.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">-</span></td>
+      <td style="display: none;" data-ice="size">175 byte</td>
+      <td style="display: none;" data-ice="lines">8</td>
+      <td style="display: none;" data-ice="updated">2020-09-03 19:28:06 (UTC)</td>
+    </tr>
+<tr data-ice="file">
+      <td data-ice="filePath"><span><a href="file/src/utils/utils.js.html#errorLines=2">src/utils/utils.js</a></span></td>
+      <td data-ice="identifier" class="identifiers">-</td>
+      <td class="coverage"><span data-ice="coverage">0 %</span><span data-ice="coverageCount" class="coverage-count">0/1</span></td>
+      <td style="display: none;" data-ice="size">272 byte</td>
+      <td style="display: none;" data-ice="lines">13</td>
+      <td style="display: none;" data-ice="updated">2020-05-03 15:01:53 (UTC)</td>
+    </tr>
+</tbody>
+</table>
 </div>
 
 <footer class="footer">
