--- a/file/src/utils/GSF_API.js.html
+++ b/file/src/utils/GSF_API.js.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <base data-ice="baseUrl">
-  <title data-ice="title">Home | GSF JavaScript Client SDK</title>
+  <base data-ice="baseUrl" href="../../../">
+  <title data-ice="title">src/utils/GSF_API.js | GSF JavaScript Client SDK</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/prettify-tomorrow.css">
   <script src="script/prettify/prettify.js"></script>
@@ -59,19 +59,17 @@
 </div>
 </nav>
 
-<div class="content" data-ice="content"><div data-ice="index" class="github-markdown"><p></p><h1 class="gsf-title">
-GSF JavaScript Client SDK
-</h1>
+<div class="content" data-ice="content"><h1 data-ice="title">src/utils/GSF_API.js</h1>
+<pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">export default {
+  ROOT_PATH: &apos;&apos;,
+  SERVICES_PATH: &apos;services&apos;,
+  TASKS_PATH: &apos;tasks&apos;,
+  JOBS_PATH: &apos;jobs&apos;,
+  JOB_SEARCH_PATH: &apos;searchJobs&apos;,
+  EVENTS_PATH: &apos;events&apos;
+};
+</code></pre>
 
-<p></p>
-<p>The GSF JavaScript Client SDK provides a client-side JavaScript library for interacting with GSF.</p>
-<h3 id="-a-href----manual-migration-guide-v4-html--&#xBB;-migration-guide--v3-to-v4--a-"><a href="./manual/migration-guide-v4.html">&#xBB; Migration Guide: v3 to v4</a></h3><p><em>Update to v3 of the SDK.</em></p>
-<h3 id="-a-href----manual-migration-guide-v3-html--&#xBB;-migration-guide--v2-to-v3--a-"><a href="./manual/migration-guide-v3.html">&#xBB; Migration Guide: v2 to v3</a></h3><p><em>Update to v3 of the SDK.</em></p>
-<h3 id="-a-href----manual-installation-html--&#xBB;-installation-guide--a-"><a href="./manual/installation.html">&#xBB; Installation Guide</a></h3><p><em>Install the SDK.</em></p>
-<h3 id="-a-href----manual-getting-started-html--&#xBB;-getting-started--a-"><a href="./manual/getting-started.html">&#xBB; Getting Started</a></h3><p><em>Get started using the SDK.</em></p>
-<h3 id="-a-href----manual-examples-html--&#xBB;-examples--a-"><a href="./manual/examples.html">&#xBB; Examples</a></h3><p><em>Learn more using code examples.</em></p>
-<h3 id="-a-href----identifiers-html--&#xBB;-api-reference--a-"><a href="./identifiers.html">&#xBB; API Reference</a></h3><p><em>Read the full developer documentation.</em></p>
-</div>
 </div>
 
 <footer class="footer">
