--- a/sdk-docs/file/src/Job.js.html
+++ b/sdk-docs/file/src/Job.js.html
@@ -63,7 +63,6 @@
 <pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">import superagent from &apos;superagent&apos;;
 import saNoCache from &apos;superagent-no-cache&apos;;
 import EventEmitter from &apos;events&apos;;
-
 import utils from &apos;./utils/utils.js&apos;;
 import GSF_API from &apos;./utils/GSF_API&apos;;
 import EVENTS from &apos;./utils/EVENTS&apos;;
@@ -143,18 +142,7 @@ class Job extends EventEmitter {
    */
   wait() {
     if (!this._waiting) {
-
       this._waiting = new Promise((resolve, reject) =&gt; {
-        // Check to make sure it hasn&apos;t already completed.
-        this.info().then((info) =&gt; {
-          if (info.jobStatus === EVENTS.succeeded) {
-            resolve(info.jobResults);
-          } else if (info.jobStatus === EVENTS.failed) {
-            reject(info.jobError);
-          }
-        }).catch((err) =&gt; {
-          reject(err);
-        });
 
         // Listen to job events.
         this.once(EVENTS.succeeded, (data) =&gt; {
@@ -166,6 +154,17 @@ class Job extends EventEmitter {
           this.info().then((info) =&gt; {
             reject(info.jobError);
           });
+        });
+
+        // Check to make sure it hasn&apos;t already completed.
+        this.info().then((info) =&gt; {
+          if (info.jobStatus === EVENTS.succeeded) {
+            resolve(info.jobResults);
+          } else if (info.jobStatus === EVENTS.failed) {
+            reject(info.jobError);
+          }
+        }).catch((err) =&gt; {
+          reject(err);
         });
       });
     }
@@ -233,7 +232,7 @@ class Job extends EventEmitter {
           }
         });
     });
-
+    
   }
 
   /**
@@ -270,6 +269,86 @@ class Job extends EventEmitter {
              err.response.text : &apos;&apos;);
             reject(&apos;Error cancelling job&apos; + status + text);
           }
+        });
+    });
+  }
+
+  /**
+ * Deletes the job.
+ * @return {Promise&lt;true, error&gt;} Returns a promise when delete is submitted.  If request
+ *  is successfully submitted, the promise will be resolved with a value of true.
+ *  If the request fails, the promise will be resolved with an error message.
+ *  Note that this only represents the success of the request made to the server,
+ *  not the deletion itself.  Use the Job.Info() function (or Job events)
+ *  to retrieve the status of the job and to learn when it is actually deleted.
+ */
+  delete() {
+    // Job url.
+    const url = this._jobURL;
+    return new Promise((resolve, reject) =&gt; {
+      // Delete job.
+      superagent
+        .delete(url)
+        .set(&apos;Content-Type&apos;, &apos;application/json&apos;)
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(true);
+          } else {
+            const status = err &amp;&amp; err.status ? &apos;: &apos; + err.status : &apos;&apos;;
+            const text =
+              err &amp;&amp; err.response &amp;&amp; err.response.text ?
+                &apos;: &apos; + err.response.text :
+                &apos;&apos;;
+            reject(&apos;Error deleting job&apos; + status + text);
+          }
+        });
+    });
+  }
+
+  /**
+   * Retrieves a list of the workspace files.
+   * @return {Promise&lt;Object[], error&gt;} Returns a promise to an array of fs.stat objects.
+   */
+  workspace() {
+    return new Promise((resolve, reject) =&gt; {
+      const jobStatusURL = this._jobURL;
+      // List workspace files.
+      superagent
+        .get(`${jobStatusURL}/workspace`)
+        .use(nocache) // Prevents caching of *only* this request
+        .set(this._client.headers)
+        .end((err, res) =&gt; {
+          if (res &amp;&amp; res.ok) {
+            resolve(res.body.workspace);
+          } else {
+            const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+            const text = ((err &amp;&amp; err.response &amp;&amp; err.response.text) ? &apos;: &apos; +
+             err.response.text : &apos;&apos;);
+            reject(&apos;Error requesting job workspace&apos; + status + text);
+          }
+        });
+    });
+  }
+
+  /**
+   * Retrieves a workspace file.
+   * @return {Promise&lt;arraybuffer, error&gt;} Returns a promise to an ArrayBuffer of the file contents.
+   */
+  file(fileName) {
+    return new Promise((resolve, reject) =&gt; {
+      const jobStatusURL = this._jobURL;
+      // Get file as arraybuffer.
+      superagent
+        .get(`${jobStatusURL}/workspace/${fileName}`)
+        .parse(superagent.parse[&apos;application/octet-stream&apos;])
+        .responseType(&apos;arraybuffer&apos;)
+        .then((res) =&gt; {
+          resolve(res.body);
+        }).catch((err) =&gt; {
+          const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
+          reject(&apos;Error requesting file&apos; + status);
         });
     });
   }
