--- a/sdk-docs/file/src/Task.js.html
+++ b/sdk-docs/file/src/Task.js.html
@@ -151,7 +151,7 @@ class Task {
         .end((err, res) =&gt; {
           if (res &amp;&amp; res.ok) {
             // Return new job object using ID.
-            resolve(new Job(this._client, res.body.jobID, progressCallback,
+            resolve(new Job(this._client, res.body.jobId, progressCallback,
               startedCallback));
           } else {
             const status = ((err &amp;&amp; err.status) ? &apos;: &apos; + err.status : &apos;&apos;);
