--- a/sdk-docs/manual/migration-guide-v3.html
+++ b/sdk-docs/manual/migration-guide-v3.html
@@ -120,6 +120,7 @@
 <li data-ice="manualNav" class="indent-h3" data-link="manual/examples.html"><a href="manual/examples.html#using-promises" data-ice="link">Using Promises</a></li>
 <li data-ice="manualNav" class="indent-h5" data-link="manual/examples.html"><a href="manual/examples.html#1--use--a-href-----class-src-task-js-task-html-instance-method-submit---strong--submit----strong---a--and-then--a-href-----class-src-job-js-job-html-instance-method-wait---strong--wait----strong---a-" data-ice="link">1. Use .submit() and then .wait()</a></li>
 <li data-ice="manualNav" class="indent-h5" data-link="manual/examples.html"><a href="manual/examples.html#2--use--a-href-----class-src-task-js-task-html-instance-method-submitandwait---strong--submitandwait----strong---a-" data-ice="link">2. Use .submitAndWait()</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/examples.html"><a href="manual/examples.html#list-and-retrieve-workspace-files" data-ice="link">List and Retrieve Workspace Files</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/examples.html"><a href="manual/examples.html#using-server-events" data-ice="link">Using Server Events</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/examples.html"><a href="manual/examples.html#tracking-job-progress" data-ice="link">Tracking Job Progress</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/examples.html"><a href="manual/examples.html#progress-callbacks" data-ice="link">Progress Callbacks</a></li>
