--- a/sdk-docs/manual/CHANGELOG.html
+++ b/sdk-docs/manual/CHANGELOG.html
@@ -137,6 +137,8 @@
     <ul class="manual-toc">
       
     <li data-ice="manualNav" class="indent-h1" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#4-2-0---2021-10-26" data-ice="link">4.2.0 / 2021-10-26</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#4-0-0---2020-06-22" data-ice="link">4.0.0 / 2020-06-22</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#breaking-changes" data-ice="link">Breaking Changes</a></li>
@@ -159,6 +161,12 @@
 </nav>
 
 <div class="content" data-ice="content"><div class="github-markdown" data-ice="content"><h1 id="change-log">Change Log</h1><p>All notable changes to this project will be documented in this file.</p>
+<h2 id="4-2-0---2021-10-26">4.2.0 / 2021-10-26</h2><h3 id="new-features">New Features</h3><ul>
+<li>Support for GSF 3.0:<ul>
+<li>Add job delete functionality, matching job deletion functionality in GSF.</li>
+</ul>
+</li>
+</ul>
 <h2 id="4-0-0---2020-06-22">4.0.0 / 2020-06-22</h2><h3 id="new-features">New Features</h3><ul>
 <li>Support for GSF 3.0:<ul>
 <li>Add &apos;query&apos; option to JobListOptions for more advanced querying of the job database.</li>
