--- a/sdk-docs/manual/index.html
+++ b/sdk-docs/manual/index.html
@@ -137,6 +137,8 @@
     <ul class="manual-toc">
       
     <li data-ice="manualNav" class="indent-h1" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html" data-ice="link">Change Log</a></li>
+<li data-ice="manualNav" class="indent-h2" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#4-2-0---2021-10-26" data-ice="link">4.2.0 / 2021-10-26</a></li>
+<li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h2" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#4-0-0---2020-06-22" data-ice="link">4.0.0 / 2020-06-22</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#new-features" data-ice="link">New Features</a></li>
 <li data-ice="manualNav" class="indent-h3" data-link="manual/CHANGELOG.html"><a href="manual/CHANGELOG.html#breaking-changes" data-ice="link">Breaking Changes</a></li>
@@ -934,7 +936,12 @@ task.submitAndWait(taskParameters)
     </div>
 <div class="manual-card-wrap" data-ice="cards">
       <div class="manual-card">
-        <div data-ice="card"><h1>Change Log</h1><p>All notable changes to this project will be documented in this file.</p><h2>4.0.0 / 2020-06-22</h2><h3>New Features</h3><ul>
+        <div data-ice="card"><h1>Change Log</h1><p>All notable changes to this project will be documented in this file.</p><h2>4.2.0 / 2021-10-26</h2><h3>New Features</h3><ul>
+<li>Support for GSF 3.0:<ul>
+<li>Add job delete functionality, matching job deletion functionality in GSF.</li>
+</ul>
+</li>
+</ul><h2>4.0.0 / 2020-06-22</h2><h3>New Features</h3><ul>
 <li>Support for GSF 3.0:<ul>
 <li>Add &apos;query&apos; option to JobListOptions for more advanced querying of the job database.</li>
 <li>Add &apos;sort&apos; option to the JobListOptions for flexible sorting of the job list.</li>
