--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       
       <hr>
       <footer>
-        <p>&copy; 2021 Harris Geospatial Solutions, Inc.</p>
+        <p>&copy; 2021 L3Harris Geospatial Solutions, Inc.</p>
       </footer>
     </div> <!-- /container -->
 
